--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -5,12 +5,10 @@
 
     <data>
 
-        <import type="sgtmelon.scriptum.office.Help.Clr"/>
-        <import type="sgtmelon.scriptum.office.Help.Pref"/>
-        <import type="sgtmelon.scriptum.office.Help.Time"/>
-        <import alias="def" type="sgtmelon.scriptum.office.annot.def.ThemeDef"/>
-        <import alias="text" type="android.text.TextUtils"/>
         <import alias="v" type="android.view.View"/>
+        <import alias="text" type="android.text.TextUtils"/>
+        <import type="sgtmelon.scriptum.office.Help.Pref"/>
+        <import alias="def" type="sgtmelon.scriptum.office.annot.def.ThemeDef"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
 
@@ -18,7 +16,7 @@
 
     <androidx.cardview.widget.CardView
             style="@style/Card"
-            app:cardBackgroundColor='@{Clr.getNote(context, noteItem.color, false)}'
+            app:noteColor='@{noteItem.color}'
             app:cardCornerRadius="@dimen/radius_4dp"
             app:cardUseCompatPadding="false"
             tools:cardBackgroundColor="@color/note_green_light">
@@ -55,7 +53,8 @@
                 <ImageView
                         style="@style/NoteItem.Color.Vertical"
                         android:contentDescription="@null"
-                        android:tint='@{Clr.getNote(context, noteItem.color, true)}'
+                        app:noteColor='@{noteItem.color}'
+                        app:viewOnDark='@{true}'
                         android:visibility='@{Pref.getTheme(context) == def.dark ? v.VISIBLE : v.GONE}'
                         tools:tint="@color/note_green_dark"
                         tools:visibility="gone"/>
