--- a/app/src/main/res/layout/item_roll_write.xml
+++ b/app/src/main/res/layout/item_roll_write.xml
@@ -6,7 +6,6 @@
     <data>
 
         <import type="sgtmelon.scriptum.R"/>
-        <import type="sgtmelon.scriptum.office.Help.Clr"/>
 
         <variable name="rollItem" type="sgtmelon.scriptum.app.model.item.RollItem"/>
 
@@ -32,7 +31,9 @@
                         android:id="@+id/drag_button"
                         style="@style/RollItem.Click"
                         android:contentDescription="@null"
-                        app:colorFilter='@{Clr.get(context, rollItem.check ? R.attr.clAccent : R.attr.clIcon)}'
+                        app:boolExpression='@{rollItem.check}'
+                        app:trueColor='@{R.attr.clAccent}'
+                        app:falseColor='@{R.attr.clIcon}'
                         app:srcCompat="@drawable/ic_move"
                         tools:tint="?attr/clAccent"/>
 
