Реагирование Rank кнопки на количество созданных категорий
0 = не активна
0 < активна

--- a/app/src/main/res/layout/fragment_roll.xml
+++ b/app/src/main/res/layout/fragment_roll.xml
@@ -11,6 +11,7 @@
         <variable name="keyEdit" type="boolean"/>
         <variable name="enterNotEmpty" type="boolean"/>
         <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
+        <variable name="rankEmpty" type="boolean"/>
 
     </data>
 
@@ -80,7 +81,8 @@
 
         <include layout="@layout/include_note_panel"
                  app:keyEdit='@{keyEdit}'
-                 app:noteItem='@{noteItem}'/>
+                 app:noteItem='@{noteItem}'
+                 app:rankEmpty='@{rankEmpty}'/>
 
     </LinearLayout>
 
