--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -11,6 +11,10 @@
         <variable name="keyEdit" type="boolean"/>
 
         <variable name="rankEmpty" type="boolean"/>
+        <variable name="noteClick"
+                  type="sgtmelon.scriptum.office.intf.MenuIntf.Note.NoteMenuClick"/>
+        <variable name="deleteClick"
+                  type="sgtmelon.scriptum.office.intf.MenuIntf.Note.DeleteMenuClick"/>
 
     </data>
 
@@ -73,7 +77,9 @@
         </FrameLayout>
 
         <include layout="@layout/include_note_panel"
+                 app:deleteClick='@{deleteClick}'
                  app:keyEdit='@{keyEdit}'
+                 app:noteClick='@{noteClick}'
                  app:noteItem='@{noteItem}'
                  app:rankEmpty='@{rankEmpty}'/>
 
