--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -46,14 +46,14 @@
 
     <!-- Dialog titles and text -->
     <string name="dialog_title_clear_bin">Отчистить корзину</string>
-    <string name="dialog_text_clear_bin">Вы уверены что хотите безвозвратно удалить все не скрытые заметки из корзины?</string>
+    <string name="dialog_text_clear_bin">Вы уверены, что хотите безвозвратно удалить все не скрытые заметки из корзины?</string>
 
     <string name="dialog_title_color">Цвет</string>
     <string name="dialog_title_rank">Категории</string>
 
     <string name="dialog_title_convert">Конвертировать</string>
-    <string name="dialog_roll_convert_to_text">Вы уверены что хотите конвертировать заметку? Все отметки в списке будут утеряны.</string>
-    <string name="dialog_text_convert_to_roll">Вы уверены что хотите конвертировать заметку? Все пустые строки будут удалены.</string>
+    <string name="dialog_roll_convert_to_text">Вы уверены что, хотите конвертировать заметку? Все отметки в списке будут утеряны.</string>
+    <string name="dialog_text_convert_to_roll">Вы уверены что, хотите конвертировать заметку? Все пустые строки будут удалены.</string>
 
     <string name="dialog_title_sort">Порядок сортировки</string>
     <string name="dialog_title_add_note">Создать заметку</string>
