--- a/app/src/main/res/values/styles_enter.xml
+++ b/app/src/main/res/values/styles_enter.xml
@@ -3,6 +3,7 @@
 
     <style name="Enter" />
 
+    <!-- TODO переделать для общих кнопок -->
     <style name="Enter.Button">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
